--- a/src/mvp.ipynb
+++ b/src/mvp.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "875ff26f-a3af-47e6-982f-ae79f03a860c",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "746c813a-884f-422f-ab48-621e58a3fd37",
    "metadata": {
     "scrolled": true
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "16a43532-453c-48e7-91f5-290a4ec3b031",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "ac5c21bc-7695-4c75-9182-7e93e96aaf30",
    "metadata": {},
    "outputs": [],
@@ -503,9 +503,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "106a7f84-fefc-4f18-9c33-bd885a25617c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -526,46 +528,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 134/134 [12:51<00:00,  5.75s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pred labels count Counter({1: 2892, 2: 887, 3: 348, 4: 113, 5: 21, 6: 1, 8: 1})\n",
-      "gold  [A] service [O] great [S] great [C] service general [SSEP] [A] dinner [O] great quality [S] great [C] food quality\n",
-      "pred  [A] quality [O] great [S] great [C] food quality [SSEP] [A] service [O] great [S] great [C] service general\n",
-      "\n",
-      "gold  [A] it [O] cozy [S] great [C] ambience general\n",
-      "pred  [A] it [O] dark [S] great [C] ambience general [SSEP] [A] it [O] cozy [S] great [C] ambience general [SSEP] [A] jazz music [O] playing [S] great [C] ambience general\n",
-      "\n",
-      "gold  [A] indian chinese food [O] great [S] great [C] food quality\n",
-      "pred  [A] indian chinese food [O] great [S] great [C] food quality\n",
-      "\n",
-      "gold  [A] location [O] expect [S] ok [C] restaurant prices [SSEP] [A] location [O] expect [S] ok [C] restaurant miscellaneous\n",
-      "pred  [A] location [O] not what i would expect [S] bad [C] restaurant prices [SSEP] [A] location [O] prestige [S] bad [C] location general\n",
-      "\n",
-      "gold  [A] chinese restaurant [O] reliable [S] great [C] restaurant general\n",
-      "pred  [A] chinese restaurant [O] reliable [S] great [C] restaurant general\n",
-      "\n",
-      "gold  [A] lobster knuckles [O] ok [S] ok [C] food style_options [SSEP] [A] lobster knuckles [O] tasteless [S] bad [C] food quality\n",
-      "pred  [A] lobster knuckles ( special of the day ) [O] ok [S] ok [C] food quality [SSEP] [A] lobster knuckles [O] tasteless [S] bad [C] food quality\n",
-      "\n",
-      "gold  [A] menu [O] simple [S] ok [C] food style_options\n",
-      "pred  [A] menu [O] simple [S] great [C] food style_options\n",
-      "\n",
-      "gold  [A] place [O] worst [S] bad [C] restaurant general\n",
-      "pred  [A] place [O] worst [S] bad [C] restaurant general\n",
-      "\n",
-      "gold  [A] it [O] never got an explanation [S] bad [C] service general\n",
-      "pred  [A] it [O] never got an explanation [S] bad [C] service general\n",
-      "\n",
-      "gold  [A] food [O] happy [S] great [C] food quality [SSEP] [A] grilled mahi mahi [O] drenched [S] bad [C] food quality [SSEP] [A] grilled mahi mahi [O] drenched [S] bad [C] food style_options\n",
-      "pred  [A] food [O] happy [S] great [C] food quality [SSEP] [A] grilled mahi mahi [O] drenched in grapfruit juice [S] bad [C] food quality\n",
-      "\n",
-      "number of gold spans: 6365, predicted spans: 6281, hit: 949\n",
-      "train-Copy1 vote precision: 15.11 recall: 14.91 F1 = 15.01\n"
+      " 31%|███       | 41/134 [04:08<08:53,  5.74s/it]"
      ]
     }
    ],
