Update .gitignore to exclude specific files

--- a/src/mvp.ipynb
+++ b/src/mvp.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "106a7f84-fefc-4f18-9c33-bd885a25617c",
    "metadata": {
     "scrolled": true
@@ -528,7 +528,46 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 31%|███       | 41/134 [04:08<08:53,  5.74s/it]"
+      "100%|██████████| 134/134 [12:57<00:00,  5.80s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pred labels count Counter({1: 2892, 2: 887, 3: 348, 4: 113, 5: 21, 6: 1, 8: 1})\n",
+      "gold  [A] service [O] great [S] great [C] service general [SSEP] [A] dinner [O] great quality [S] great [C] food quality\n",
+      "pred  [A] quality [O] great [S] great [C] food quality [SSEP] [A] service [O] great [S] great [C] service general\n",
+      "\n",
+      "gold  [A] it [O] cozy [S] great [C] ambience general\n",
+      "pred  [A] it [O] dark [S] great [C] ambience general [SSEP] [A] it [O] cozy [S] great [C] ambience general [SSEP] [A] jazz music [O] playing [S] great [C] ambience general\n",
+      "\n",
+      "gold  [A] indian chinese food [O] great [S] great [C] food quality\n",
+      "pred  [A] indian chinese food [O] great [S] great [C] food quality\n",
+      "\n",
+      "gold  [A] location [O] expect [S] ok [C] restaurant prices [SSEP] [A] location [O] expect [S] ok [C] restaurant miscellaneous\n",
+      "pred  [A] location [O] not what i would expect [S] bad [C] restaurant prices [SSEP] [A] location [O] prestige [S] bad [C] location general\n",
+      "\n",
+      "gold  [A] chinese restaurant [O] reliable [S] great [C] restaurant general\n",
+      "pred  [A] chinese restaurant [O] reliable [S] great [C] restaurant general\n",
+      "\n",
+      "gold  [A] lobster knuckles [O] ok [S] ok [C] food style_options [SSEP] [A] lobster knuckles [O] tasteless [S] bad [C] food quality\n",
+      "pred  [A] lobster knuckles ( special of the day ) [O] ok [S] ok [C] food quality [SSEP] [A] lobster knuckles [O] tasteless [S] bad [C] food quality\n",
+      "\n",
+      "gold  [A] menu [O] simple [S] ok [C] food style_options\n",
+      "pred  [A] menu [O] simple [S] great [C] food style_options\n",
+      "\n",
+      "gold  [A] place [O] worst [S] bad [C] restaurant general\n",
+      "pred  [A] place [O] worst [S] bad [C] restaurant general\n",
+      "\n",
+      "gold  [A] it [O] never got an explanation [S] bad [C] service general\n",
+      "pred  [A] it [O] never got an explanation [S] bad [C] service general\n",
+      "\n",
+      "gold  [A] food [O] happy [S] great [C] food quality [SSEP] [A] grilled mahi mahi [O] drenched [S] bad [C] food quality [SSEP] [A] grilled mahi mahi [O] drenched [S] bad [C] food style_options\n",
+      "pred  [A] food [O] happy [S] great [C] food quality [SSEP] [A] grilled mahi mahi [O] drenched in grapfruit juice [S] bad [C] food quality\n",
+      "\n",
+      "number of gold spans: 6365, predicted spans: 6281, hit: 949\n",
+      "train-Copy1 vote precision: 15.11 recall: 14.91 F1 = 15.01\n"
      ]
     }
    ],
